# IDMasker

./: .gitignore  pyproject.toml  run.bat
.claude/: settings.local.json
docs/: OPEN_QUESTIONS.md  SPEC.md
src/: crypto.py  csv_reporter.py  folder_scanner.py  gui.py  main.py
tests/: test_crypto.py  test_scanner.py
